...
        )
        AlertPresenter.showAlert(alertModel, delegate: self)
    }
    
    private func showExitAlert() {
        let alertModel = AlertModel(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            buttonText: "Нет",
            cancelButtonText: "Да",
            completion: { [weak self] in
                guard let self else { return }
                if let profileCell = self.tableView.cellForRow(at: IndexPath(row: 0, section: 0)) as? ProfileViewCell {
                    profileCell.cancelExit()
                }
                self.dismiss(animated: true)
...
