...
        button.layer.cornerRadius = 16
        
        button.setTitle("Войти", for: .normal)
        button.titleLabel?.font = .boldSystemFont(ofSize: 18)
        button.setTitleColor(.ypBlack, for: .normal)
        button.backgroundColor = .ypWhite
        button.accessibilityIdentifier = "Authenticate"
        button.addTarget(self, action: #selector(didEntryButtonTapped), for: .touchUpInside)
        return button
    }()
    
    // MARK: - Lifecycle
    
...
